--- a/.github/workflows/testing.yaml
+++ b/.github/workflows/testing.yaml
@@ -25,6 +25,7 @@ jobs:
         uses: google-github-actions/auth@7c6bc770dae815cd3e89ee6cdf493a5fab2cc093 # v3.0.0
         with:
           workload_identity_provider: ${{ vars.CENTRAL_WIF_PROVIDER }}
+          project_id: prj-opentdf-4fc4
           token_format: "access_token"
 
       - name: "Docker login to Artifact Registry"
