--- a/.github/workflows/testing.yaml
+++ b/.github/workflows/testing.yaml
@@ -25,16 +25,13 @@ jobs:
         uses: google-github-actions/auth@7c6bc770dae815cd3e89ee6cdf493a5fab2cc093 # v3.0.0
         with:
           workload_identity_provider: ${{ vars.CENTRAL_WIF_PROVIDER }}
-          project_id: prj-opentdf-4fc4
-          token_format: "access_token"
+          project_id: ${{ vars.CENTRAL_WIF_PROJECT_ID }}
 
-      - name: "Docker login to Artifact Registry"
-        uses: docker/login-action@74a5d142397b4f367a81961eba4e8cd7edddf772 # v3.4.0
-        with:
-          registry: us-docker.pkg.dev
-          username: oauth2accesstoken
-          password: ${{ steps.gcp-auth.outputs.access_token }}
+      - name: "Set up Cloud SDK"
+        uses: "google-github-actions/setup-gcloud@v3"
+
 
       - name: Sign the images with GitHub OIDC Token
         run: |
+          gcloud auth configure-docker us-docker.pkg.dev
           docker pull us-docker.pkg.dev/prj-opentdf-4fc4/opentdf/platform:nightly
