--- a/.github/workflows/release-build.yaml
+++ b/.github/workflows/release-build.yaml
@@ -26,7 +26,10 @@ jobs:
         uses: google-github-actions/auth@7c6bc770dae815cd3e89ee6cdf493a5fab2cc093 # v3.0.0
         with:
           workload_identity_provider: ${{ vars.CENTRAL_WIF_PROVIDER }}
-          token_format: "access_token"
+          project_id: ${{ vars.CENTRAL_WIF_PROJECT_ID }}
+
+      - name: "Set up Cloud SDK"
+        uses: google-github-actions/setup-gcloud@aa5489c8933f4cc7a4f7d45035b3b1440c9c10db # v3.0.1
 
       - name: "Install Cosign"
         uses: sigstore/cosign-installer@faadad0cce49287aee09b3a48701e75088a2c6ad # 4.0.0
@@ -43,13 +46,6 @@ jobs:
         uses: docker/setup-buildx-action@e468171a9de216ec08956ac3ada2f0791b6bd435 # v3.11.1
         with:
           cache-binary: false
-
-      - name: "Docker login to Artifact Registry"
-        uses: docker/login-action@74a5d142397b4f367a81961eba4e8cd7edddf772 # v3.4.0
-        with:
-          registry: us-docker.pkg.dev
-          username: oauth2accesstoken
-          password: ${{ steps.gcp-auth.outputs.access_token }}
 
       - name: "Generate Docker metadata"
         id: docker_meta
