--- a/opentdf-ers-test.yaml
+++ b/opentdf-ers-test.yaml
@@ -36,6 +36,11 @@ services:
   kas:
     enabled: true
     port: 9000
+    # Optional list of JWT claim names to log in audit and forward to auth decisions.
+    # Supports dot notation for nested claims (e.g., realm_access.roles).
+    # audited_entity_jwt_claims:
+    #   - sub
+    #   - realm_access.roles
   
   # Policy Service  
   policy:
